EB-7425: Fixed Qty box alignment on item detail page.

--- a/src/WebChannel/main/webapp/xpedx/css/global/global-2014.css
+++ b/src/WebChannel/main/webapp/xpedx/css/global/global-2014.css
@@ -1666,3 +1666,7 @@ hr.shade {
 .xpedx-light-box p.addmargintop10 {
 	margin: 10px 0 0 0;
 }
+
+.detail-view .qty_selector {
+	size: auto;
+}
